<resources>
    <string name="app_name">DrawMovingBall</string>

    <string name="dx">dX</string>
    <string name="dy">dY</string>
    <string name="framerate">Frame Rate</string>
    <string name="color">Color</string>
    <string name="hint">0</string>
    <string name="send">Send Params</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_input">Input</string>
    <string name="title_activity_ball">Ball</string>

    <string name="hello_world">Hello world!</string>
</resources>
