<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.seventhree.drawmovingball.Input">


    <Spinner
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:id="@+id/color"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:id="@+id/colorView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dx"
        android:id="@+id/dxView"
        android:layout_below="@+id/color"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dxInput"
        android:layout_marginLeft="38dp"
        android:layout_marginStart="38dp"
        android:layout_alignBottom="@+id/dxView"
        android:layout_alignLeft="@+id/color"
        android:layout_alignStart="@+id/color"
        android:hint="@string/hint"
        android:background="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dy"
        android:id="@+id/dyView"
        android:layout_below="@+id/dxInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dyInput"
        android:layout_alignBottom="@+id/dyView"
        android:layout_alignLeft="@+id/dxInput"
        android:layout_alignStart="@+id/dxInput"
        android:hint="@string/hint"
        android:background="@null"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frameInput"
        android:hint="@string/hint"
        android:layout_below="@+id/dyView"
        android:layout_alignLeft="@+id/dyInput"
        android:layout_alignStart="@+id/dyInput"
        android:background="@null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/framerate"
        android:id="@+id/frameView"
        android:layout_alignBottom="@+id/frameInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/sendBtn"
        android:layout_marginTop="40dp"
        android:onClick="sendParams"
        android:layout_below="@+id/frameInput"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
